Testing a PCs feed

--- a/_config.yml
+++ b/_config.yml
@@ -69,6 +69,9 @@ collections:
     notes:
       output: true
       permalink: /note/:title
+    pcs:
+      output: true
+      permalink: /pcs/:title
 
 markdown: kramdown
 
